[package]
name = "tokio-scope"
version = "0.1.0"
authors = ["Lucy Scarlet <yuiyukihira@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.6", features = ["rt", "sync"]}

[dev-dependencies]
tokio = {version = "1.6", features = ["full"]}
futures = {version = "0.3", default_features = true}